--- a/PlanIt/src/index.css
+++ b/PlanIt/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+i:hover{
+    cursor: pointer;
+    /* border-radius: 100%; */
+    background-color: #f0f0f0;
+}
